syntax = "proto3";
package bitcoin.hdwallet;
//option go_package = "./bitcoin";

import "bitcoin/hdwallet.message.proto";

service HDWallet {
	rpc CreateWalletAddress(CreateWalletRequest) returns (CreateWalletResponse);
	rpc GetNewAddress(GetNewAddressRequest) returns (GetNewAddressResponse);
	rpc GetPrivateKey(GetPrivateKeyRequest) returns (GetPrivateKeyResponse);
	rpc GetPubKeyHash(GetPubKeyHashRequest) returns (GetPubKeyHashResponse);
	rpc GetAddressUTXO(GetAddressUTXORequest) returns (GetAddressUTXOResponse);
	rpc ListUnspent(ListUnspentRequest) returns (ListUnspentResponse);
	rpc SendToAddress(SendToAddressRequest) returns (SendToAddressResponse);
}
